webui/css/bridge.css
/*@font-face { 
    font-family:'SAP-icons';
    src: url('../lib/ui5-fonts-140120/SAP-icons.eot');
    src:local('SAP-Icons'), 
    url('../lib/ui5-fonts-140120/SAP-icons.ttf') format(TrueType);
}*/
 @font-face {
    font-family:'SAP-icons';
    src: url('fonts/SAP-icons_140120.eot'), url('fonts/SAP-icons_140120.ttf');
    /* IE9+ */
    font-weight: normal;
    font-style: normal;
}

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 100;
  src: local('Open Sans'), local('OpenSans'), url('fonts/open_sans_light.woff') format('woff');
}

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Open Sans'), local('OpenSans'), url('fonts/open_sans_reg.woff') format('woff');
}
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 700;
  src: local('Open Sans Bold'), local('OpenSans-Bold'), url('fonts/open_sans_bold.woff') format('woff');
}

 @font-face {
    font-family:'bridge_icons';
    src: url('fonts/bridge_icons.eot'), url('fonts/bridge_icons.ttf');
    font-weight: normal;
    font-style: normal;
}

body {
    height: 100%;
    width: 100%;
    font-size: 1em;
    /*line-height: 1.4;*/
    font-family:'Open Sans', sans-serif;
    margin-left: auto;
    margin-right: auto;
}
img {
    pointer-events: none;
}

.tab-active {
    left: -1px;
    width: 36px;
}
.tab-inactive {
    left: 0px;
    width: 35px;
}
.settingsButton {
    /*width: 36px;*/
    height: 40px;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 8px;
    padding-right: 8px;
    border-radius: 0 3px 3px 0;
    border-right: 1px solid rgba(231, 231, 231, 1);
    border-top:  1px solid rgba(231, 231, 231, 1);
    border-bottom:  1px solid rgba(231, 231, 231, 1);
    cursor: pointer;                
    line-height: 1;    
    background-color:rgba(255, 255, 255, 1);        
    color:#0099CC;
    font-family: 'SAP-icons';
    font-weight: normal;
    font-size:18px;
    z-index: 1201;
    text-align: center;
    vertical-align: middle;
}

.settingsButton:hover {
    color:#2A6496;
}

.feature_check_true {
    color: green;
}

.feature_check_false {
    color: red;
}

.image_rounded_shadow img {
    margin: 0px 0px 0px 0px;
    padding: 0px 0px 0px 0px;
    border-radius:8px;
    -moz-border-radius:8px;
    -webkit-border-radius:8px;
}
.noselect {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor:default;
}
.prio {
    font-size: 18px;
    width:100%;
    padding-left:20px;
}
.clickable {
    cursor: pointer;
}
.details {
    background-color: white;
}
.innerbox {
    height: 100%;
    width: 100%;
    background-color: white;
    padding: 5px;
    border: 1px solid transparent;
    border-color: #dddddd;
    padding:5px 15px;
}

.boxDisable {
    background-color: #E6E6E6;

}

.boxDisable * {
    opacity: 0.9;
}

.boxLeft {
    width: 25%;
    float: left;
    font-family:'Open Sans', sans-serif;
    color: #707070;
}
.boxRight {
    width: 75%;
    float: left;
    font-family:'Open Sans', sans-serif;
    color: #707070;
}
.box-1 {
    float: left;
    width: 200px;
    height: 200px;
    position: relative;
    text-align: left;
}
.box-2 {
    float: left;
    width: 420px;
    height: 200px;
    position: relative;
    text-align: left;
}
.headerline {
    color: #666666;
    width: 100%;
    position: relative;
    z-index: 100;
    height: 40px;
    background: rgba(242, 242, 242, 0.96);
    font-size: 17px;
    /*border-top: 5px solid #0078B9;*/
    border-bottom: 1px solid rgb(231, 231, 231);
}
.headertext {
    position: absolute;
    top:5px;
    left:10px;
    font-size:22px;
}
#menu {
    font-family:'Open Sans', sans-serif;
    color: #666666;
    width: 100%;
    text-align: center;
}
.mainNav {
    margin: 0px auto;
    padding-left: 36px;
    height: 40px;
    min-width: 400px;
    background-color: rgb(255, 255, 255);
    background: url('../img/menuLine.png') repeat-x left bottom rgba(255, 255, 255, 0.9);
}
.mainNav > li {
    height: 40px;
    display: -moz-inline-box;
    /* THE KEY LINES */
    display: inline-block;
    /* THE KEY LINES */
    font-size: 15px;
    font-family:'Open Sans';
    font-weight: 300;
    letter-spacing: 0.05em;
    padding: 5px;
    margin: 0px;
    cursor: pointer;
}
.mainNav > li.selected {
    font-weight: bold;
    font-size: 17px;
    background: url('../img/menuArrow2.png') no-repeat center bottom;
}
.sapIcon {
    font-family:'SAP-icons';
    padding-right: 13px;
    padding-left: 13px;
    vertical-align: middle;
}
.mainPageBackgroundGradient {
    position: absolute;
    height: 100%;
    width: 100%;
    right:0;
    background-color: white;
    background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0.3) 0, rgba(0, 124, 192, 0.2) 100%);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgb(255, 255, 255)), color-stop(100%, rgb(0, 124, 192)));
    background-image: -webkit-linear-gradient(top, rgb(255, 255, 255) 0, rgb(0, 124, 192) 100%);
    background-image: -ms-linear-gradient(top, rgba(255, 255, 255, 0.3) 0, rgba(0, 124, 192, 0.2) 100%);
    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3) 0, rgba(0, 124, 192, 0.2) 100%);
    background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0.3) 0, rgba(0, 124, 192, 0.2) 100%);
    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3;
    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
    -webkit-tranform: translateZ(0);
    z-index:5;
}
.mainPageBackground {
    width: 100%;
    height: 100%;
    background-image: url('../img/stripes.png');
    background-position: center bottom;
    background-attachment: fixed;
    background-repeat: repeat;
    z-index: 10;
    position: absolute;
    overflow-y: scroll;
    overflow-x: hidden;
}
.centeredContent {
    top: 40px;
    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: auto;
    position: relative;
    text-align: center;
}
/* 6 column */
 @media (min-width: 1620px) {
    .centeredContent {
        width: 1320px;
    }
}
/* 5 column */
 @media (min-width: 1420px) and (max-width: 1619px) {
    .centeredContent {
        width: 1100px;
    }
}
/* 4 column */
 @media (min-width: 1200px) and (max-width: 1419px) {
    .centeredContent {
        width: 880px;
    }
}
/* 2 column */
 @media (max-width: 1199px) {
    .centeredContent {
        width: 440px;
    }
}
#loadingAnimation {
    background-color: rgba(0, 120, 185, 1);
    position: absolute;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    z-index: 1000;
}
.absoluteCenter {
    margin: auto;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 200px;
    height:200px;
}
.box-heading {
    font-family:'Open Sans', sans-serif;
    color: #707070;
    border-bottom: 1px solid #CCCCCC;
    height: 18%;
}
.box-heading-content {
    position: relative;
    width: 100%;
    height: 100%;
}
.box-content {
    width: 100%;
    height: 82%;
    font-family:'Open Sans', sans-serif;
    color: #707070;
    margin-top: 5px;
}
.box-title {
    display: inline;
    font-size: 14px;
    font-weight: 500;
    font-family:'Open Sans', sans-serif;
    line-height: 32px;
}
.box-icon {
    font-family:'bridge_icons';
    font-size: 20px;
    color: #0099CC;
    margin-right: 2px;
    float: right;
}
.download-icon {
    font-family:'SAP-icons';
    font-size: 20px;
    color: #0099CC;    
    padding-left: 10px;    
}

.download-icon:hover{
    text-decoration: none;
}

.settingsIcon {
    font-family:'SAP-icons';
    font-size: 20px;
    color:#707070;
    margin-right: 10px;
    float: right;
}
.settingsIcon:hover {
    cursor: pointer;
}

@media screen and (min-width: 768px) {
    .settings-dialog .modal-dialog {
        width: auto;
        position: absolute;
        left: 100px;
        right: 100px;
    }
    .settings-dialog .modal-content {
        -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
    }
}
.settings-dialog .modal-content {
    padding: 40px;
    position: relative;
    border: 0px;
    border-radius: 0px;
    -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
    background-clip: padding-box;
    outline: none;
}


.download-dialog {
    width: 415px;
    height: 240px;
    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: auto;  
    overflow: hidden;  
}

.download-dialog .modal-dialog {
    width: 415px;
    height: 240px;
    margin: 0px;
}

.download-dialog .modal-content {
    width: 415px;
    height: 240px;
    padding: 20px;
    position: relative;
    border: 0px;
    border-radius: 0px;
    -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
    background-clip: padding-box;
    outline: none;
}

.div-background-gradient {
    position: absolute;
    height: 100%;
    width: 100%;
    right:0;
    top: 0;
    background-color: #ffffff;
    background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0.3) 0, rgba(0, 124, 192, 0.2) 100%);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgb(255, 255, 255)), color-stop(100%, rgb(0, 124, 192)));
    background-image: -webkit-linear-gradient(top, rgb(255, 255, 255) 0, rgb(0, 124, 192) 100%);
    background-image: -ms-linear-gradient(top, rgba(255, 255, 255, 0.3) 0, rgba(0, 124, 192, 0.2) 100%);
    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3) 0, rgba(0, 124, 192, 0.2) 100%);
    background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0.3) 0, rgba(0, 124, 192, 0.2) 100%);
    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3;
    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
    -webkit-tranform: translateZ(0);
}
.div-background {
    width: 100%;
    height: 100%;
    background-image: url('../img/stripes.png');
    background-position: center bottom;
    background-attachment: fixed;
    background-repeat: repeat;
    position: absolute;
    overflow-y: hidden;
    overflow-x: hidden;
}
input[type="checkbox"] {
    -webkit-appearance: none;
    background-color: #ffffff;
    border: 1px solid #cacece;
    padding: 8px;
    display: inline-block;
    position: relative;
    margin-top: 8px;
    margin-bottom: 8px;
}
input[type="checkbox"]:checked {
    background-color: #ffffff;
    border: 1px solid #adb8c0;
    color: #99a1a7;
}
input[type="checkbox"]:checked:after {
    content:'\2714';
    font-size: 12px;
    position: absolute;
    top: 0px;
    left: 3px;
    color: #99a1a7;
}
.sortable-list {
    list-style-type: none;
    width: 100%;
    display:inline-block;
    padding-left: 0px;
}
.sortable-item {
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 20px;
    display:inline-block;
    /*float: left; */
}
.sortable-placeholder {
    border-style:dashed;
    border-width:2px;
    border-color:black;
}

.bold
{
    font-weight: bold;
}

